--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Yuriy
+name: Mysochenko Yuriy
 
 # Short bio or description (displayed in the header)
-description: Android developer
+description: Development notes and stuff
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/3196011?v=4
 
 #
 # Flags below are optional
