--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Mysochenko Yuriy
+name: sdex
+
+# Name of the author
+author: Mysochenko Yuriy
 
 # Short bio or description (displayed in the header)
 description: Development notes and stuff
@@ -73,9 +76,16 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-seo-tag
+  - jekyll-paginate
+
+include: ['_pages']
+
+paginate: 10
+paginate_path: /page:num/
 
 # Exclude these files from your production _site
 exclude:
