--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   instagram:
   linkedin: ymysochenko
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: sdex # just type anything here for a working RSS icon
   twitter: sdexyz
   stackoverflow: users/2894324/sdex
   youtube: # channel/<your_long_string> or user/<user-name>
@@ -44,7 +44,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://blog.sdex.dev
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
